# gold-testing

./: .env.example  .gitignore  Makefile  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/assess/: orchestrator.py  routes.py  schemas.py
backend/app/audio/: tap_features.py
backend/app/auth/: otp_stub.py  routes.py
backend/app/db/: models.py
backend/app/decision/: engine.py  rules.yaml
backend/app/fraud/: hallmark_sanity.py  image_dedup.py  multiview_consistency.py
backend/app/fusion/: engine.py  purity_model.py  weight_model.py
backend/app/services/: gemini.py  gold_price.py  object_store.py  pdf.py
backend/app/vision/: classifier.py  depth.py  hallmark_detector.py  hallmark_ocr.py  pipeline.py  plating_detector.py  quality.py  scale.py  segmenter.py
backend/scripts/: download_models.sh  generate_demo_assets.py  seed_demo_data.py  train_audio_model.py  train_weight_model.py
backend/tests/: conftest.py  test_decision.py  test_fusion.py  test_phase4.py  test_phase6_audio.py  test_vision.py  test_vision_integration.py
backend/tests/fixtures/: generate.py  make_audio.py
docs/: architecture.md  deviations.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vite.config.ts
frontend/public/: manifest.webmanifest  service-worker.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: CameraGuide.tsx  ConfidenceBar.tsx  EvidenceTile.tsx  HallmarkGuide.tsx  LanguagePicker.tsx  QualityChip.tsx
frontend/src/lib/: api.ts  compress.ts  i18n.ts  quality.ts  store.ts
frontend/src/locales/: en.json  hi.json
frontend/src/routes/: About.tsx  Audio.tsx  Capture.tsx  Home.tsx  Lender.tsx  Onboarding.tsx  Result.tsx  Review.tsx
